# Araxon

./: .gitignore  Araxon.txt  LICENSE  README.md  VOICE_COMMANDS_REFERENCE.md  bootstrap.py  create_dirs.py  init_project.py  inline_setup.py  main.py  quick_setup.sh  requirements.txt  requirements_modified.txt  run_setup.py  setup_dirs.py  setup_project.py  test_automation_router.py  test_routing_quick.py  test_vision_router.py  test_voice.py  test_wake_flow.py
araxon/: __init__.py
araxon/agent/: __init__.py  agent_controller.py  executor.py  graph.py  planner.py  tools.py
araxon/ai/: __init__.py  brain.py  memory.py  personality.py  router.py
araxon/automation/: __init__.py  app_launcher.py  automation_router.py  browser_agent.py  command_runner.py  web_launcher.py  workspace_manager.py
araxon/core/: __init__.py  config.py  logger.py  utils.py
araxon/internet/: __init__.py  extractor.py  internet_router.py  news_fetcher.py  researcher.py  searcher.py  wiki_lookup.py
araxon/memory/: __init__.py  embedder.py  file_ingester.py  long_term_memory.py  rag_pipeline.py  vector_store.py
araxon/ui/: __init__.py  command_handler.py  ui_bridge.py  websocket_server.py
araxon/vision/: __init__.py  analyzer.py  ocr.py  screenshot.py  vision_pipeline.py  vision_router.py
araxon/voice/: __init__.py  audio_player.py  listener.py  synthesizer.py  transcriber.py  voice_input.py  voice_output.py
config/: settings.yaml
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json
ui/src-tauri/: Cargo.toml  tauri.conf.json
(+72 files in other folders)
